--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "http-proxy": "^1.18.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.0",
+    "@types/react": "^18.2.0",
+    "@types/node": "^20.11.0"
   }
 }
